Updates from 1.5.3 to 1.5.4

admin\ajax
-- Folder removed, files relocated.

admin\includes\classes\products_with_attributes_stock.php
-- Update for bug related to a zero value entry

admin\orders.php
-- Files updated with changes from Zen Cart 1.5.3.

admin\products_with_attributes_stock.php
-- Updated to support relocated ajax files.

admin\products_with_attributes_stock_ajax.js
-- Moved file from admin\ajax folder, minor comments clean-up.

admin\stock_by_attr_install.php
-- Bug fix changed order of alterSBAtableCustomid() and alterSBAtabeSort().
-- Addition of new select options.
-- Changed the default settings for the 'Configuration -> Stock' SBA Options.
-- Updated on-screen help.
-- Change folder for Export and Import, now used the 'admin\backups' folder.

----------------------------------------------

includes\functions\extra_functions\products_with_attributes.php
-- Added new feature to change image displayed when the selection is changed "in a Select List (drop-down)".

includes\modules\pages\shopping_cart\header_php.php
-- Updated when 'customid' is shown.

includes\modules\YOUR_TEMPLATE\attributes.php
-- Added option to display images when a selection is changed in select list. 
-- Change to correct customid display behaviour with various option switches.
-- Added a new option switch 'SBA_SHOW_IMAGE_ON_PRODUCT_INFO'.
-- Moved Out of Stock label to after attribute name.

includes\templates\YOUR_TEMPLATE\jscript\jquery.form.js
includes\templates\YOUR_TEMPLATE\jscript\jquery-1.10.2.min.js
-- Moved file from admin\ajax folder.

------------------------------------------

Added CSS support to format the SBA Selection list.

Add the following to your  stylesheet.css.
Make changes as needed for your site.

/* SBA Selection List format */
.sbaselectlist{
	display: inline;
	font-size: 1em;
	margin: 0.1em;
}

------------------------------------------

New concept, this includes a parentid, childis, and siblingid for the table products_with_attributes_stock.
