@@ -19,6 +19,7 @@ define('PWA_QUANTITY', 'Quantit&eacute;: ');
 define('PWA_QUANTITY_FOR_ALL_VARIANTS', 'Quantit&eacute; pour toutes les Variantes');
 define('PWA_ADD_QUANTITY', 'Ajouter Quantit&eacute; pour cette Variante du Produit');
 define('PWA_SYNC_QUANTITY', 'Synchronisation de la Quantiti&eacute;');
+define('TEXT_IMAGE_NONEXISTENT', 'Aucune image disponible');
 
 define('PWA_EDIT_QUANTITY', 'Editer la Quantit&eacute;');
 define('PWA_DELETE_VARIANT', 'Effacer la Variante');
@@ -36,3 +37,7 @@ define('PWA_PAC', 'Unique Combo');
 define('PWA_EDIT', 'Editer');
 define('PWA_DELETE', 'Supprimer');
 define('PWA_SUBMIT','Soumettre');
+
+define('PWA_PARENT', 'Parent');
+define('PWA_CHILD', 'Child');
+define('PWA_SIBLING', 'Sibling');
